Fixes the alignment issues in the BPC app footer

--- a/static/framework/pedi_bpc/css/bpc-screen.css
+++ b/static/framework/pedi_bpc/css/bpc-screen.css
@@ -109,23 +109,22 @@ input[type='number'] {border: 1px solid #555;}
     display: none;
 }
 
-#copy {
+#footer {
+    margin-top: 2px;
+    width: 780px;
+}
+
+#version {
     font: 300 .7em "Helvetica Neue", Helvetica, "Arial Unicode MS", Arial, sans-serif;
-    right: 1em;
     text-align: right;
 	width: 100px;
-	margin-top: 2px;
     position: relative;
     float: left;
-}
-#copy a {
-    color: #fff;
 }
 
 #warning {
     text-align: left;
-	width: 686px;
-	margin-top: 2px;
+	width: 680px;
     color: #000;
     position: relative;
     float: left;
